--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,8 +312,8 @@ footer{
         width: 40%;
     }
     #portrait{
-        height: 200px;
-        width: 225px;
+        height: 300px;
+        width: 300px;
     }
     .portImages{ 
         width: 320px;
@@ -358,5 +358,88 @@ footer{
 }
 
 @media screen and (max-width: 640px) {
-    
+    header{
+        position: static;
+        width: 100%;
+        height: 160px;
+        margin-bottom: 30px;
+        border-left: 0px;
+        border-right: 0px;
+    }
+    .name{
+        width: 640px;
+        margin-left: 0px;
+        text-align: center;
+        padding: 30px 0px 30px 0px;
+    }
+    .links{
+        padding-top: 20px;
+        margin-right: 260px;
+    }
+    .maincontent{
+        margin: auto;
+        margin-bottom: 120px;
+        padding: 30px;
+        width: 80%;
+    }
+    #portrait{
+        height: 360px;
+        width: 360px;
+        float: none;
+        margin-left: 80px;
+        margin-right: 140px;
+    }
+    .portImages{ 
+        width: 100%;
+        height: 100%;
+    }
+    .galleryImagesTopLeft{
+        width: 480px;
+        height: 360px;
+        margin-left: 16px;
+    }
+    .galleryImagesTopRight{
+        width: 480px;
+        height: 360px;
+        margin-left: 16px;
+        margin-right: 0px;
+        float: left;
+    }
+    .galleryImagesMiddleLeft{
+        width: 480px;
+        height: 360px;
+        margin-left: 16px;
+    }
+    .galleryImagesBottomRight{
+        width: 480px;
+        height: 360px;
+        float: left;
+        margin-left: 16px;
+        margin-right: 0px;
+    }
+    .galleryImagesBottomLeft{
+        width: 480px;
+        height: 360px;
+        margin-left: 16px;
+    }
+    .galleryLinkText{
+        width: 100%;
+        font-size: 40px;
+        top: 280px;
+    }
+    footer{
+        width: 100%;
+    }
+    .footertext{
+        width: 100%;
+        text-align: center;
+        position: relative;
+        left: -40px;
+    }
+    input[type=text]{
+        width: 512px;
+    }
+    .messageBox{
+        width: 512px;
+    }
 }
